# Foreman

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
foreman/: __main__.py  cli.py  config.py  init.py
foreman/brain/: architecture.py  assembler.py  session.py
foreman/compact/: injector.py  monitor.py  summarizer.py
foreman/implement/: executor.py  patcher.py  planner.py
foreman/models/: fetcher.py  keys.py  profiles.py  router.py
foreman/tokens/: budget.py  cost.py  counter.py
foreman/tools/: __init__.py  definitions.py
foreman/tui/: app.py  foreman.tcss  widgets.py  workers.py
