[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foreman"
version = "0.1.0"
description = "Agentic CLI coding assistant with Planner-Worker paradigm"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.9.0",
    "litellm>=1.60.0",
    "pydantic-ai>=0.2.0",
    "textual>=1.0.0",
    "rich>=13.0.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "pydantic>=2.0.0",
]

[project.scripts]
foreman = "foreman.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["foreman"]